# Rustic_Audio

./: .gitignore  About_Rustic_Audio.md  Cargo.toml  README.md
Builds/: Rust_IO(V1.0).7z  Rust_IO(V1.1-GUI.7z  rustio(1.3 cleanUI-SlowOpus).7z  rustio(1.3_chipmonk_opus_fix).7z  rustio(1.3_opus_granualizer).7z  rustio(1.4).7z  rustio(1.4-toggles).7z  rustio(1.4.5_RMS).7z  rustio(1.4.5_RMS_hideNorm).7z  rustio(1.5).7z  rustio(1.5-UI).7z
Rust_Audio_GUI/: Cargo.toml  unprocessed.opus
Rust_Audio_GUI/src/: dsp.rs  lib.rs  main.rs  opus_encoder.rs  opus_playback.rs  playback.rs  record.rs
Rust_Audio_Library/: Cargo.toml  readme.md
Rust_Audio_Library/examples/: basic_usage.rs
Rust_Audio_Library/src/: dsp.rs  lib.rs  opus_encoder.rs  opus_playback.rs  record.rs
Rustic_Audio_Library/: Cargo.toml
Rustic_Audio_UI/: Cargo.toml
Rustic_Audio_UI/src/: opus_encoder.rs
src/: dsp.rs  main.rs  opus_encoder.rs  opus_playback.rs  playback.rs  record.rs
