[package]
name = "rustic_audio"
version = "0.1.5"
edition = "2021"

[dependencies]
cpal = "0.15.2"
hound = "3.5.1"
eframe = { version = "0.24.1", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24.1"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
rustfft = "6.1.0"
realfft = "3.3.0"
rand = "0.8"
audiopus = "0.3.0-rc.0"
ogg = "0.8.0"
opus = "0.3.0"
rfd = "0.12.1"