[package]
name = "rustic_audio_tool"
version = "0.0.1"
authors = ["Brett Alexander Preston"]
description = "Voice Audio Recording, Processing, and Playback"
license = "GPLv3"
repository = "https://github.com/brettpreston/Rustic_Audio/tree/main/Rust_Audio_Library"
readme = "readme.md"
keywords = ["DSP", "voice", "record", "audio"]
categories = ["audio", "DSP"]
edition = "2021"

[dependencies]
cpal = "0.15.2"
hound = "3.5.1"
rustfft = "6.1.0"
realfft = "3.3.0"
audiopus = "0.3.0-rc.0"
ogg = "0.8.0"
opus = "0.3.0"

[lib]
name = "rustic_audio_tool"
path = "src/lib.rs"