[package]
name = "rustic_audio_tool"
version = "0.0.1"
authors = ["Brett Alexander Preston"]
description = "Voice Audio Recording, Processing, and Playback"
license = "AGPL-3.0-only"
repository = "https://github.com/brettpreston/Rustic_Audio/tree/main/Rust_Audio_Library"
readme = "readme.md"
keywords = ["DSP", "voice", "record", "audio", "clean"]
categories = ["multimedia::audio"]
edition = "2021"

[dependencies]
# Cross-Platform Audio Library
cpal = "0.15.2"

# Reading and writing WAV audio files
hound = "3.5.1"

# Fast Fourier Transform
rustfft = "6.1.0"

# optimized FFT operations for real-valued signals
realfft = "3.3.0"

# pure Rust Opus codec
opus-rs = "0.1.19"

# reading and writing Ogg container files.
ogg = "0.8.0"

[lib]
name = "rustic_audio_tool"
path = "src/lib.rs"